# mcp-server-uyuni-report

./: .gitignore  Dockerfile  README.md  demo.sh  insert_test_data.sh  pyproject.toml  start_uyuni_report_db.sh
src/mcp_server_uyuni_report/: __init__.py  __main__.py  db.py  main.py  server.py
test/: acceptance_tests.py  insert_test_data.sql  schema.sql  test_cases.json
